--- a/AndroidLabOne/app/src/main/AndroidManifest.xml
+++ b/AndroidLabOne/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
             android:label="@string/title_activity_view_to_do"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".CreateToDoActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
