--- a/AndroidLabOne/app/src/main/AndroidManifest.xml
+++ b/AndroidLabOne/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name=".UpdateToDoActivity"></activity>
         <activity
             android:name=".ViewToDoActivity"
-            android:label="@string/title_activity_view_to_do"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".CreateToDoActivity" />
         <activity android:name=".MainActivity"
